gitops/unused_external-r2/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-r2
  labels:
    pod-security.kubernetes.io/enforce: restricted

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3manager
  namespace: external-r2
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/app: s3manager
      app.kubernetes.io/instance: r2
  template:
    metadata:
      labels:
        app.kubernetes.io/app: s3manager
        app.kubernetes.io/instance: r2
    spec:
      containers:
      - name: r2
        # Upstream is currently rebuilding in with HTMX using the latest tag. We want to stay on v0.5.0 until it is donw
        image: docker.io/cloudlena/s3manager:v0.11.0
        # imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 60M
        livenessProbe:
          # # Liveness Probe for new HTMX frontend
          # httpGet:
          #   path: /static/pico@1.5.10.min.css
          #   port: http

          # Lveness Probe for v0.5.0
          httpGet:
            path: /static/js/materialize.min.js
            port: http
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
        runAsGroup: 101

---
apiVersion: v1
kind: Service
metadata:
  name: r2
  namespace: external-r2
spec:
  selector:
    app.kubernetes.io/app: s3manager
    app.kubernetes.io/instance: r2
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: r2-http
  namespace: external-r2
spec:
  tls:
  - hosts:
      - r2.buc.sh
    secretName: cert-r2-buc-sh
  rules:
  - host: "r2.buc.sh"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: r2
            port:
              name: http

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-r2-egress
  namespace: external-r2
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/app: s3manager
      app.kubernetes.io/instance: r2
  policyTypes:
    - Egress
    - Ingress
  egress:
  # Allow DNS Resolution
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - ipBlock:
        cidr: "10.0.0.19/32"
    ports:
    - port: 9000
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-http
    ports:
    - protocol: TCP
      port: 8080
